--- a/cfn/eks-cluster.yml
+++ b/cfn/eks-cluster.yml
@@ -15,49 +15,51 @@ Parameters:
 
 # Resources
 Resources:
-  EksClusterRole:
+  EksServiceRole:
     Type: AWS::IAM::Role
     Properties:
       AssumeRolePolicyDocument:
         Version: "2012-10-17"
         Statement:
-          - Effect: Allow
-            Principal:
-              Service:
-                - eks.amazonaws.com
-            Action:
-              - sts:AssumeRole
+        - Effect: Allow
+          Principal:
+            Service:
+            - eks.amazonaws.com
+          Action:
+          - sts:AssumeRole
       ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/AmazonEKSServicePolicy
         - arn:aws:iam::aws:policy/AmazonEKSClusterPolicy
       Tags:
         - Key: Name
-          Value: !Sub "${StackName}-EksClusterRole"
+          Value: !Sub "${StackName}-EksServiceRole"
 
   EksCluster:
     Type: AWS::EKS::Cluster
     Properties:
       Name: !Sub "${StackName}-EksCluster"
       Version: "1.14"
-      RoleArn: !GetAtt EksClusterRole.Arn
+      RoleArn: !GetAtt EksServiceRole.Arn
       ResourcesVpcConfig:
         SecurityGroupIds:
-          - Fn::ImportValue: !Sub ${StackName}-SecurityGroup
+        - Fn::ImportValue:
+            !Sub ${StackName}-SecurityGroup
         SubnetIds:
-          Fn::Split:
-            - ","
-            - Fn::ImportValue:
-                Fn::Sub: ${StackName}-SubnetIds
+            Fn::Split:
+                - ","
+                - Fn::ImportValue:
+                      Fn::Sub: ${StackName}-SubnetIds
 
 # Outputs
 Outputs:
   RoleArn:
     Description: The role that Amazon EKS will use to create AWS resources for Kubernetes clusters
-    Value: !GetAtt EksClusterRole.Arn
+    Value: !GetAtt EksServiceRole.Arn
     Export:
-      Name: !Sub ${StackName}-RoleArn
-
-  EksClusterName:
+      Name: !Sub ${StackName}-EksRoleArn
+      
+  EksCluster:
     Description: EKS cluster name
     Value: !Ref EksCluster
-    Export:
-      Name: !Sub ${StackName}-EksClusterName
+    Export: 
+        Name: !Sub ${StackName}-EksCluster
