--- a/cfn/eks-node-group.yml
+++ b/cfn/eks-node-group.yml
@@ -66,7 +66,7 @@ Parameters:
 
   NodeInstanceType:
     Type: String
-    Default: t3.medium
+    Default: t2.micro
     ConstraintDescription: Must be a valid EC2 instance type
     Description: EC2 instance type for the node instances
 
@@ -81,14 +81,6 @@ Conditions:
         - Ref: NodeImageId
         - ""
 
-# Mappings
-Mappings:
-  ServicePrincipals:
-    aws-cn:
-      ec2: ec2.amazonaws.com.cn
-    aws:
-      ec2: ec2.amazonaws.com
-
 # Resources
 Resources:
   NodeInstanceRole:
@@ -100,13 +92,13 @@ Resources:
           - Effect: Allow
             Principal:
               Service:
-                - !FindInMap [ServicePrincipals, !Ref "AWS::Partition", ec2]
+                - ec2.amazonaws.com
             Action:
               - "sts:AssumeRole"
       ManagedPolicyArns:
-        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKSWorkerNodePolicy"
-        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEKS_CNI_Policy"
-        - !Sub "arn:${AWS::Partition}:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
+        - "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
+        - "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
+        - "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
       Path: /
 
   NodeInstanceProfile:
@@ -121,10 +113,12 @@ Resources:
     Properties:
       GroupDescription: Security group for all nodes in the cluster
       Tags:
-        - Key: !Sub
-            - "kubernetes.io/cluster/${EksCluster}"
-            - EksCluster:
-                Fn::ImportValue: !Sub "${StackName}-EksClusterName"
+        - Key:
+              !Sub
+                  - "kubernetes.io/cluster/${EksCluster}"
+                  - EksCluster:
+                      Fn::ImportValue:
+                        !Sub "${StackName}-EksCluster"
           Value: owned
       VpcId:
         Fn::ImportValue: !Sub ${StackName}-VpcId
@@ -147,7 +141,8 @@ Resources:
       Description: Allow pods to communicate with the cluster API Server
       FromPort: 443
       GroupId:
-        Fn::ImportValue: !Sub "${StackName}-SecurityGroup"
+        Fn::ImportValue:
+          !Sub "${StackName}-SecurityGroup"
       IpProtocol: tcp
       SourceSecurityGroupId: !Ref NodeSecurityGroup
       ToPort: 443
@@ -160,7 +155,8 @@ Resources:
       DestinationSecurityGroupId: !Ref NodeSecurityGroup
       FromPort: 1025
       GroupId:
-        Fn::ImportValue: !Sub "${StackName}-SecurityGroup"
+        Fn::ImportValue:
+          !Sub "${StackName}-SecurityGroup"
       IpProtocol: tcp
       ToPort: 65535
 
@@ -172,7 +168,8 @@ Resources:
       DestinationSecurityGroupId: !Ref NodeSecurityGroup
       FromPort: 443
       GroupId:
-        Fn::ImportValue: !Sub "${StackName}-SecurityGroup"
+        Fn::ImportValue:
+          !Sub "${StackName}-SecurityGroup"
       IpProtocol: tcp
       ToPort: 443
 
@@ -185,7 +182,8 @@ Resources:
       GroupId: !Ref NodeSecurityGroup
       IpProtocol: tcp
       SourceSecurityGroupId:
-        Fn::ImportValue: !Sub "${StackName}-SecurityGroup"
+        Fn::ImportValue:
+          !Sub "${StackName}-SecurityGroup"
       ToPort: 65535
 
   NodeSecurityGroupFromControlPlaneOn443Ingress:
@@ -197,7 +195,8 @@ Resources:
       GroupId: !Ref NodeSecurityGroup
       IpProtocol: tcp
       SourceSecurityGroupId:
-        Fn::ImportValue: !Sub "${StackName}-SecurityGroup"
+        Fn::ImportValue:
+          !Sub "${StackName}-SecurityGroup"
       ToPort: 443
 
   NodeLaunchConfig:
@@ -219,17 +218,19 @@ Resources:
       SecurityGroups:
         - Ref: NodeSecurityGroup
       UserData:
-        Fn::Base64: !Sub
-          - |
-            #!/bin/bash
-            set -o xtrace
-            /etc/eks/bootstrap.sh ${EksCluster} ${BootstrapArguments}
-            /opt/aws/bin/cfn-signal --exit-code $? \
-                    --stack  ${AWS::StackName} \
-                    --resource NodeGroup  \
-                    --region ${AWS::Region}
-          - EksCluster:
-              Fn::ImportValue: !Sub "${StackName}-EksClusterName"
+        Fn::Base64:
+          !Sub
+            - |
+                #!/bin/bash
+                set -o xtrace
+                /etc/eks/bootstrap.sh ${EksCluster} ${BootstrapArguments}
+                /opt/aws/bin/cfn-signal --exit-code $? \
+                        --stack  ${AWS::StackName} \
+                        --resource NodeGroup  \
+                        --region ${AWS::Region}
+            - EksCluster:
+                Fn::ImportValue:
+                    !Sub "${StackName}-EksCluster"
 
   NodeGroup:
     Type: "AWS::AutoScaling::AutoScalingGroup"
@@ -241,21 +242,25 @@ Resources:
       Tags:
         - Key: Name
           PropagateAtLaunch: "true"
-          Value: !Sub
-            - "${EksCluster}-${NodeGroupName}-Node"
-            - EksCluster:
-                Fn::ImportValue: !Sub "${StackName}-EksClusterName"
-        - Key: !Sub
-            - "kubernetes.io/cluster/${EksCluster}"
-            - EksCluster:
-                Fn::ImportValue: !Sub "${StackName}-EksClusterName"
+          Value:
+                !Sub
+                  - "${EksCluster}-${NodeGroupName}-Node"
+                  - EksCluster:
+                      Fn::ImportValue:
+                        !Sub "${StackName}-EksCluster"
+        - Key:
+              !Sub
+                - "kubernetes.io/cluster/${EksCluster}"
+                - EksCluster:
+                    Fn::ImportValue:
+                      !Sub "${StackName}-EksCluster"
           PropagateAtLaunch: "true"
           Value: owned
       VPCZoneIdentifier:
         Fn::Split:
-          - ","
-          - Fn::ImportValue:
-              Fn::Sub: ${StackName}-SubnetIds
+            - ","
+            - Fn::ImportValue:
+                Fn::Sub: ${StackName}-SubnetIds
     UpdatePolicy:
       AutoScalingRollingUpdate:
         MaxBatchSize: 1
@@ -267,13 +272,13 @@ Outputs:
   NodeInstanceRole:
     Description: The node instance role
     Value: !GetAtt NodeInstanceRole.Arn
-    Export:
+    Export: 
       Name: !Sub ${StackName}-NodeInstanceRole
 
   NodeSecurityGroup:
     Description: The security group for the node group
     Value: !Ref NodeSecurityGroup
-    Export:
+    Export: 
       Name: !Sub ${StackName}-NodeSecurityGroup
 
   NodeAutoScalingGroup:
